--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 // ===== .env.example =====
-EMAIL=twojemail@gmail.com
-EMAIL_PASS=haslo_do_gmaila_app
+const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+if (!emailRegex.test(email)) return res.status(400).send('Nieprawidłowy email');
